--- a/css/general.css
+++ b/css/general.css
@@ -51,6 +51,21 @@ Medium: 11px
 /*********************************/
 /* GENERAL REUSABLE COMPONENT */
 /*********************************/
+
+/*========== SCROLL BAR ==========*/
+::-webkit-scrollbar {
+  width: 0.9rem;
+  background-color: hsl(207, 12%, 90%);
+  border-radius: 0.5rem;
+}
+::-webkit-scrollbar-thumb {
+  background-color: hsl(207, 12%, 80%);
+  border-radius: 0.5rem;
+}
+::-webkit-scrollbar-thumb:hover {
+  background-color: hsl(207, 8%, 65%);
+}
+
 ::selection {
   background-color: var(--clr-primary);
   color: var(--clr-tint);
